Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2910918 by drunken monkey, borisson_: Fixed error in fields configuration
  form.
- #2650986 by drunken monkey, borisson_: Fixed various problems with Views
  field handling.
- #2907518 by drunken monkey, jrockowitz, borisson_: Fixed index
  creation/update via CLI on large sites.
- #2908440 by claudiu.cristea: Fixed UnsavedIndexConfiguration documentation.
- #2899678 by drunken monkey, Graber, borisson_: Added support for VBO.
- #2909153 by drunken monkey, borisson_: Fixed fatal error for test fails under
  certain conditions.
- #2907756 by drunken monkey, bojanz: Fixed "Entity status" processor to
  support other publishable entity types.
- #2904377 by drunken monkey, borisson_: Added Autocomplete tests for the DB
  backend.
- #2907943 by drunken monkey: Fixed warnings on PHP 5.
- #2906099 by drunken monkey: Fixed use of field's underlying property label in
  Views.
- #2896073 by drunken monkey, New Zeal: Fixed warnings when indexing empty text
  fields.
- #2898082 by drunken monkey: Re-organized our test class namespaces.
- #2907334 by drunken monkey: Fixed some more Drupal coding standards
  violations.
- #2903407 by drunken monkey, alan-ps: Added #optional to form containers where
  appropriate.

Search API 1.4 (2017-09-07):
----------------------------
- #2905117 by drunken monkey: Fixed problems with multi-valued
  processor-generated fields on Solr.
- #2884034 by drunken monkey: Fixed highlighting for processed keywords.
- #2902947 by drunken monkey: Fixed "Thousands marker" setting for Views fields.
- #2902907 by drunken monkey, juagarc4: Fixed indexing of multibyte text on
  MySQL.
- #2903805 by drunken monkey: Disabled fields processors for hidden fields.
- #2903014 by drunken monkey: Fixed "Enable for all fields" processor option.
- #2904976 by drunken monkey: Fixed the current test fails.
- #2902810 by drunken monkey, borisson_: Made query serialization in tests
  safer.